--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
 <body>
   <header class="cabecalho">
     <div class="container">
-      <input type="checkbox" id="menu" class="container__botao" />
+      <input type="checkbox" id="menu" class="container-botao" />
       <label for="menu">
-        <span class="cabecalho__menu-hamburguer container__imagem"></span>
+        <span class="cabecalho-menu-hamburguer container-imagem"></span>
       </label>
       <ul class="lista-menu">
-        <li class="lista-menu__titulo">Categorias</li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Programação</a>
+        <li class="lista-menu-titulo">Categorias</li>
+        <li class="lista-menu-item">
+          <a href="#" class="lista-menu-link">Programação</a>
         </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Front-end</a>
+        <li class="lista-menu-item">
+          <a href="#" class="lista-menu-link">Front-end</a>
         </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Infraestrutura</a>
+        <li class="lista-menu-item">
+          <a href="#" class="lista-menu-link">Infraestrutura</a>
         </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Business</a>
+        <li class="lista-menu-item">
+          <a href="#" class="lista-menu-link">Business</a>
         </li>
-        <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Design & UX</a>
+        <li class="lista-menu-item">
+          <a href="#" class="lista-menu-link">Design & UX</a>
         </li>
       </ul>
-      <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+      <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container-imagem">
     </div>
     <div class="container">
-      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
-      <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
-      <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
+      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container-imagem"></a>
+      <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras" class="container-imagem"></a>
+      <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="container-imagem"></a>
     </div>
   </header>
 </body>
