--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
       <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras" class="container-imagem"></a>
       <a href="#"><img src="img/Usuário.svg" alt="Meu perfil" class="container-imagem"></a>
     </div>
+    <section class="banner">
+      <h2 class="banner-titulo"></h2>
+      <p class="banner-texto"></p>
+      <input type="search" class="banner-pesquisa">
+    </section>
   </header>
 </body>
 
